--- a/index.html
+++ b/index.html
@@ -7,16 +7,35 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="min-h-screen bg-gray-500 text-[#DCD7C9] flex flex-col items-center justify-center">
+    <div class="min-h-screen bg-gray-500 text-[#000] flex flex-col items-center justify-center">
         <section class="md:w-5/6 md:my-16 h-fit bg-gray-200 md:p-16 p-5 rounded text-primary-light shadow-lg">
-            <div>
+            <div class="flex md:flex-row flex-col md:gap-6 gap-3 items-center w-full">
+                <img src="" alt="" srcset="">
+                <div>
+                    <div class="md:flex text-center sm:text-left w-full">
+                        <div>
+                            <h2 class="lg:text-5xl text-3xl font-bold">Ike Asamoah-Ansah</h2>
+                            <p class="hidden sm:block text-lg font-semibold my-2">
+                                Full-stack Python Developer | Back-end Specialist | Open Source Contributor
+                            </p>
+                            <ul class="text-lg font-semibold my-2 sm:hidden">
+                                <li>Full-stack Python Developer</li>
+                                <li>Back-end Specialist</li>
+                                <li>Open Source Contributor</li>
+                            </ul>
+                        </div>
+                        <div></div>
+                    </div>
+                    <div class="mt-3 flex gap-2 text-2xl w-fit mx-auto sm:m-0">
 
+                    </div>
+                </div>
             </div>
             <div>
 
             </div>
             <section>
-                
+
             </section>
         </section>
         <footer>
