--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
                 <button class="false rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">My Projects</button>
                 <button class="false rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">Contact Me</button>
             </div>
-            <section>
-
+            <section class="flex gap-8 justify-between mt-8">
+                <div class="flex flex-col gap-3 md:w-2/3 text-justify ">
+                    <p>
+                        Hello! I'm Ike, a passionate developer who loves to explore the world of technology. My primary tech stack is Python, and I thrive on using it to bring creative ideas to life. 
+                        I have a deep-seated passion for building projects that solve real-world problems and make life easier for people. 
+                        Currently, I'm immersed in the exciting journey of developing a shop management system, where I'm putting my coding skills to the test.
+                    </p>
+                    <p>
+                        Beyond coding, I'm a firm believer in the power of collaboration. I'm always ready to connect with like-minded individuals who share my enthusiasm for technology and project development. 
+                        I find immense joy in working together with others to create innovative solutions and bring dreams to reality. 
+                        If you're interested in teaming up on a project or simply want to have a tech-related conversation, feel free to reach out to me!
+                    </p>
+                </div>
+                <img src="" alt="" class="w-1/4 hidden sm:block">
             </section>
         </section>
         <footer>
