--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="min-h-screen bg-gray-600 text-[#000] flex flex-col items-center justify-center">
-        <section class="md:w-5/6 md:my-16 h-fit bg-gray-500 md:p-16 p-5 rounded text-primary-light shadow-lg">
+    <div class="min-h-screen bg-blue-900 text-[#fff] flex flex-col items-center justify-center">
+        <section class="md:w-5/6 md:my-16 h-fit bg-blue-900 md:p-16 p-5 rounded text-primary-light drop-shadow-2xl">
             <div class="flex md:flex-row flex-col md:gap-6 gap-3 items-center w-full">
                 <img src="" alt="" srcset="">
                 <div>
@@ -65,7 +65,7 @@
                         If you're interested in teaming up on a project or simply want to have a tech-related conversation, feel free to reach out to me!
                     </p>
                 </div>
-                <img src="" alt="" class="w-1/4 hidden sm:block">
+                <img src="/assets/Humaaans - Space.png" alt="" class="w-1/4 hidden sm:block">
             </section>
         </section>
         <footer>
