--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ike --010101</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -65,12 +66,10 @@
                         If you're interested in teaming up on a project or simply want to have a tech-related conversation, feel free to reach out to me!
                     </p>
                 </div>
-                <img src="/assets/Humaaans - Space.png" alt="" class="w-1/4 hidden sm:block">
+                <img src="/assets/images/Humaaans - Space.png" alt="" class="w-1/4 hidden sm:block">
             </section>
         </section>
-        <footer>
-
-        </footer>
+        <footer class="flex items-center gap-1 py-4">Made with <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg> by Ike</footer>
     </div>
 </body>
 </html>
