--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ike --010101</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/main.js"></script>
 </head>
 <body>
     <div class="min-h-screen bg-blue-900 text-[#fff] flex flex-col items-center justify-center">
@@ -50,13 +51,13 @@
                     </div>
                 </div>
             </div>
-            <div class="mt-10 flex md:gap-5 pt-5 mb-5 md:justify-center justify-between border-b border-[rgba(255,255,255,0.5)] font-semibold">
-                <button class="border-white rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">About Me</button>
-                <button class="false rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">My Projects</button>
-                <button class="false rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">Contact Me</button>
+            <div class="tab-button-container mt-10 flex md:gap-5 pt-5 mb-5 md:justify-center justify-between border-b border-[rgba(255,255,255,0.5)] font-semibold">
+                <button onclick="openTab('tab1', this)" class="border-white rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">About Me</button>
+                <button onclick="openTab('tab2', this)" class="rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">My Projects</button>
+                <button onclick="openTab('tab3', this)" class="rounded-t  md:px-2 py-3 border-b-2 border-transparent hover:border-white md:text-base text-sm">Contact Me</button>
             </div>
-            <section class="flex gap-8 justify-between mt-8">
-                <div class="flex flex-col gap-3 md:w-2/3 text-justify ">
+            <section id="tab1" class="tab flex gap-8 justify-between mt-8">
+                <div class="flex flex-col gap-3 md:w-2/3 text-justify">
                     <p>
                         Hello! I'm Ike, a passionate developer who loves to explore the world of technology. My primary tech stack is Python, and I thrive on using it to bring creative ideas to life. 
                         I have a deep-seated passion for building projects that solve real-world problems and make life easier for people. 
@@ -68,7 +69,41 @@
                         If you're interested in teaming up on a project or simply want to have a tech-related conversation, feel free to reach out to me!
                     </p>
                 </div>
-                <img src="/assets/images/Humaaans - Space.png" alt="" class="w-1/4 hidden sm:block">
+                <img src="/assets/images/Humaaans - Space.png" alt="" class="human-img w-1/4 hidden sm:block">
+            </section>
+            <section id="tab2" class="tab hidden">
+                <div class="flex flex-wrap gap-8">
+                    <a href="https://me45y63.pythonanywhere.com/login" target="_blank">
+                        <div class="bg-blue-800 md:px-5 md:py-8 p-5 rounded-2xl md:hover:bg-gradient-to-r transition-gradient duration-300 delay-300 ease-in-out flex md:flex-row flex-col gap-8 text-justify cursor-pointer">
+                            <img src="/assets/teeny-weeny-4d5e3b2e.svg" alt="" class="hidden md:w-1/3 w-0">
+                            <div class="flex flex-col gap-4">
+                                <div class="flex justify-between">
+                                    <h2 class="text-2xl font-semibold">Django Chat</h2>
+                                    <div class="flex gap-2 text-2xl">
+                                        <a href="https://github.com/Me45y63/django-chat-application">
+                                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg>
+                                        </a>
+                                        <a href="https://me45y63.pythonanywhere.com/login">
+                                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><g id="Globe"><path d="M14.645,2.428a8.1,8.1,0,0,0-1.61-.3,9.332,9.332,0,0,0-3.6.28l-.07.02a9.928,9.928,0,0,0,.01,19.15,9.091,9.091,0,0,0,2.36.34,1.274,1.274,0,0,0,.27.02,9.65,9.65,0,0,0,2.63-.36,9.931,9.931,0,0,0,.01-19.15Zm-.27.96a8.943,8.943,0,0,1,5.84,5.11h-4.26a13.778,13.778,0,0,0-2.74-5.35A8.254,8.254,0,0,1,14.375,3.388Zm-2.37-.09a12.78,12.78,0,0,1,2.91,5.2H9.075A12.545,12.545,0,0,1,12.005,3.3Zm3.16,6.2a13.193,13.193,0,0,1,0,5.01H8.845a12.185,12.185,0,0,1-.25-2.5,12.353,12.353,0,0,1,.25-2.51Zm-5.6-6.09.07-.02a9.152,9.152,0,0,1,1.16-.23A13.618,13.618,0,0,0,8.045,8.5H3.8A9,9,0,0,1,9.565,3.408Zm-6.5,8.6a8.71,8.71,0,0,1,.37-2.51h4.39a13.95,13.95,0,0,0-.23,2.51,13.757,13.757,0,0,0,.23,2.5H3.435A8.591,8.591,0,0,1,3.065,12.008Zm6.57,8.61a8.9,8.9,0,0,1-5.84-5.11h4.24a13.632,13.632,0,0,0,2.77,5.35A8.1,8.1,0,0,1,9.635,20.618Zm-.56-5.11h5.84a12.638,12.638,0,0,1-2.91,5.21A12.872,12.872,0,0,1,9.075,15.508Zm5.3,5.11a11.551,11.551,0,0,1-1.17.24,13.8,13.8,0,0,0,2.75-5.35h4.26A8.924,8.924,0,0,1,14.375,20.618Zm1.8-6.11a13.611,13.611,0,0,0,0-5.01h4.39a8.379,8.379,0,0,1,.37,2.51,8.687,8.687,0,0,1-.36,2.5Z"></path></g></svg>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p class="text-lg">Django Chat is a simple user-friendly chat application built with the Django framework. This was built to show the possibility of incoporating websockets in python</p>
+                            </div>
+                            <img src="/assets/images/chat.png" alt="" class="false md:w-1/3 w-0 ">
+                        </div>
+                    </a>
+                </div>
+            </section>
+            <section id="tab3" class="tab hidden">
+                <div class="flex flex-col gap-3 md:w-2/3 text-justify hidden">
+                    <p>
+                        eeeeeee
+                    </p>
+                    <p>
+                        hhhhh
+                    </p>
+                </div>
             </section>
         </section>
         <footer class="flex items-center gap-1 py-4">Made with <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg> by Ike</footer>
