--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ike --010101</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </head>
 <body>
     <div class="min-h-screen bg-blue-900 text-[#fff] flex flex-col items-center justify-center">
@@ -69,7 +69,7 @@
                         If you're interested in teaming up on a project or simply want to have a tech-related conversation, feel free to reach out to me!
                     </p>
                 </div>
-                <img src="/assets/images/Humaaans - Space.png" alt="" class="human-img w-1/4 hidden sm:block">
+                <img src="assets/images/Humaaans - Space.png" alt="" class="human-img w-1/4 hidden sm:block">
             </section>
             <section id="tab2" class="tab hidden">
                 <div class="flex flex-wrap gap-8">
@@ -90,7 +90,7 @@
                                 </div>
                                 <p class="text-lg">Django Chat is a simple user-friendly chat application built with the Django framework. This was built to show the possibility of incoporating websockets in python</p>
                             </div>
-                            <img src="/assets/images/chat.png" alt="" class="false md:w-1/3 w-0 ">
+                            <img src="assets/images/chat.png" alt="" class="false md:w-1/3 w-0 ">
                         </div>
                     </a>
                 </div>
