--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p>
                         Hello! I'm Ike, a passionate developer who loves to explore the world of technology. My primary tech stack is Python, and I thrive on using it to bring creative ideas to life. 
                         I have a deep-seated passion for building projects that solve real-world problems and make life easier for people. 
-                        Currently, I'm immersed in the exciting journey of developing a shop management system, where I'm putting my coding skills to the test.
+                        Currently, I'm immersed in the exciting journey of developing a secure chat application, where I'm putting my coding skills to the test.
                     </p>
                     <p>
                         Beyond coding, I'm a firm believer in the power of collaboration. I'm always ready to connect with like-minded individuals who share my enthusiasm for technology and project development. 
